--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^2.9.11",
     "axios": "^1.2.4",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-calendar": "^4.0.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
